--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Timer</title>
 </head>
 <body>
 	<div class="timer"></div>
+	<button class="pause">Пауза</button>
+	<button class="continue">Продолжить</button>
+	<button class="clear">Очистить</button>
+	<button class="add">+5 минут</button>
 
 	<script type="text/javascript" src="timer.js"></script>
 </body>
